Closed
Bug 1614730
Opened 5 years ago
Closed 5 years ago
Crash in [@ SetValidationOptionsCommon]
Categories
(Core :: Security: PSM, defect, P1)
Core
Security: PSM
Tracking
()
RESOLVED
FIXED
mozilla75
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox73 | --- | unaffected |
firefox74 | --- | unaffected |
firefox75 | --- | fixed |
People
(Reporter: calixte, Assigned: kershaw)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-4d41033b-69d2-457b-911f-0a3240200211.
Top 10 frames of crashing thread:
0 XUL SetValidationOptionsCommon security/manager/ssl/nsNSSComponent.cpp:1209
1 XUL mozilla::net::nsIOService::OnTLSPrefChange netwerk/base/nsIOService.cpp:326
2 XUL NotifyCallbacks modules/libpref/Preferences.cpp:1681
3 XUL mozilla::Preferences::SetPreference modules/libpref/Preferences.cpp
4 XUL mozilla::net::SocketProcessChild::RecvPreferenceUpdate netwerk/ipc/SocketProcessChild.cpp:138
5 XUL mozilla::net::PSocketProcessChild::OnMessageReceived ipc/ipdl/PSocketProcessChild.cpp:1222
6 XUL mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2215
7 XUL nsThread::ProcessNextEvent ipc/glue/MessageChannel.cpp:2007
8 XUL <name omitted> xpcom/threads/nsThreadUtils.cpp:486
9 XUL mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:109
There are 2 crashes (from 1 installation) in nightly 75 with buildid 20200211094607. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1607194.
[1] https://hg.mozilla.org/mozilla-central/rev?node=20f3d7a5481d
Flags: needinfo?(kershaw)
Assignee | ||
Updated•5 years ago
|
Assignee: nobody → kershaw
Flags: needinfo?(kershaw)
Priority: -- → P1
Assignee | ||
Comment 1•5 years ago
|
||
Pushed by kjang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8baaed81dd29
Make sure NSS is initialized before updating preference r=dragana
Comment 3•5 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
Updated•5 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•