Bug 1614730 - Make sure NSS is initialized before updating preference r=dragana

It is possible that NSS is not initialized when receiving a preference update from parent process, so we have to call `EnsureNSSInitializedChromeOrContent()` before updating the preference.

Differential Revision: https://phabricator.services.mozilla.com/D62555

--HG--
extra : moz-landing-system : lando