netwerk/base/nsIOService.cpp
@@ -315,6 +315,11 @@ nsIOService::~nsIOService() {
 void nsIOService::OnTLSPrefChange(const char* aPref, void* aSelf) {
   MOZ_ASSERT(IsSocketProcessChild());
 
+  if (!EnsureNSSInitializedChromeOrContent()) {
+    LOG(("NSS not initialized."));
+    return;
+  }
+
   nsAutoCString pref(aPref);
   // The preferences listed in gCallbackSecurityPrefs need to be in sync with
   // the code in HandleTLSPrefChange() and SetValidationOptionsCommon().
